[package]
name = "organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "organizer_lib"
path = "src/lib.rs"

[bin]
name = "organizer"
path = "src/main.rs"

[dependencies]
directories = "5.0.0"
toml = "0.7.3"
walkdir = "2.3.3"
